Fixed spacing issue

--- a/src/Main.css
+++ b/src/Main.css
@@ -76,6 +76,10 @@ li {
   padding: 0px !important;
 }
 
+.no-margins{
+  margin-left: 0px !important;
+}
+
 @media screen and (max-width: 1300px) {
   .card-component h3 {
     font-size: 0.75rem;
